add: update gitignore
